--- a/src/index.css
+++ b/src/index.css
@@ -356,11 +356,38 @@ template {
 .text--light {
   color: #fff;
 }
+.text--dark {
+  color: rgb(5, 15, 25);
+}
+
+.text--grey {
+  color: rgb(144, 161, 184);
+}
 .text--massive {
   font-size: 48px;
   font-weight: 800;
   line-height: 52px;
   margin: 0px;
+}
+.text--mass {
+  font-size: 40px;
+  font-weight: 700;
+  color: rgb(15, 50, 86);
+  text-align: center;
+  margin: 0px 0px 10px;
+}
+.text--large {
+  line-height: 1.3;
+  color: rgb(5, 15, 25);
+  font-size: 32px;
+  font-weight: 400;
+  margin: 0;
+}
+.text--small {
+  font-size: 14px !important;
+  line-height: 1.6 !important;
+  font-weight: 400;
+  color: rgb(5, 15, 25);
 }
 .btn--massive {
   color: rgb(255, 255, 255);
@@ -386,4 +413,18 @@ template {
   margin: 0px;
   border-radius: 4px;
   border: none;
+}
+.btn--small--blue {
+  position: relative;
+
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-size: 14px;
+  background-color: rgb(22, 82, 240);
+  margin: 0px;
+  border-radius: 4px;
+  padding: 12px 16px;
+  border: none;
+  width: fit-content;
+  margin-bottom: 24px;
 }
