--- a/src/index.css
+++ b/src/index.css
@@ -429,3 +429,18 @@ template {
   width: fit-content;
   margin-bottom: 24px;
 }
+
+.btn--secondary {
+  white-space: nowrap;
+  position: relative;
+  width: auto;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-size: 14px;
+  background-color: transparent;
+  margin: 0px;
+  border-radius: 4px;
+  transition: all 80ms ease-in-out 0s;
+  padding: 12px 16px;
+  border: 1px solid rgb(255, 255, 255);
+}
