--- a/src/index.css
+++ b/src/index.css
@@ -444,3 +444,16 @@ template {
   padding: 12px 16px;
   border: 1px solid rgb(255, 255, 255);
 }
+
+@media screen and (max-width: 550px) {
+  .text--massive {
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 40px;
+    margin: 0px;
+  }
+  .btn--massive {
+    text-align: center !important;
+    margin: 12px 0px !important;
+  }
+}
